<resources>
    <string name="app_name">Android-Snack</string>
    <string name="star">游戏开始</string>
    <string name="stop">游戏暂停</string>
    <string name="restar">重新开始</string>
    <string name="stargame">新游戏</string>
    <string name="promptstar">点击下方游戏开始按钮，开始游戏</string>
    <string name="promptrestar">游戏结束，请点击下方重新开始按钮</string>
    <string name="UP">向上</string>
    <string name="DWON">向下</string>
    <string name="LEFT">向左</string>
    <string name="RIGHT">向右</string>
    <string name="SCORE">分数:</string>
    <string name="MOSTSCORE">最高分数:</string>
    <string name="back">退出游戏</string>
    <string name="historyscore">点击查看历史最高分数</string>
</resources>